# AML-Formalization

./: .Makefile.coq.d  .gitignore  .travis.yml  AML_definition.v  AML_soundness.v  AML_soundness_lemmas.v  Dockerfile  Ensembles_Ext.v  FOL_helpers.v  FOL_helpers_locallynmlss.v  KnasterTarski.v  LICENSE  Lattice.v  MSFOL_definition.v  Makefile  Makefile.coq.conf  NAT_definition.v  PowersetLattice.v  README.md  TEST_Axiom_Helper_Functions.v  TEST_Axiom_Helper_Lemmas.v  TEST_Context.v  TEST_Function_and_Predicate.v  TEST_Strictly_Positiveness_in_AML.v  TEST_ext_evaluation_in_AML.v  _CoqProject  build-in-docker.sh  coq-matching-logic.opam  default.nix  dune-project  extralibrary.v  flake.nix  locally_nameless.v  names.v  proofmode.md  run-in-docker.sh  shell.nix  test-koreimport.sh
.circleci/: config.yml
ML/: DefaultVariables.v  Signature.v
Theories/: Definedness.v  Sorts.v
kore/: .Makefile.d  Makefile.conf  README.md  _CoqProject
koreimport/: pyproject.toml
koreimport-test/: test.sh
koreimport/src/koreimport/: __main__.py
matching-logic/: .Makefile.coq.d  Makefile  Makefile.coq  Makefile.coq.conf  Makefile.coq.local  README.md  _CoqProject  default.nix  evaluator.hs  flake.nix  shell.nix
matching-logic-doc/: Makefile  run_alectryon.sh
nix/: deps.nix  sources.json
old/: AML_definition.v  NAT_definition.v  TEST_Strictly_Positiveness_in_AML.v
pattern-generator/: Extraction.hs
prover/: Makefile  _CoqProject  check-generated-proof-objects.sh  patch-extracted-hs.sh  proof_ex.mm  shell.nix  translation_techreport.md
scripts/: convert_to_unicode.py  (+1 more)
(+1037 files in other folders)
