[project]
name = "koreimport"
version = "0.1.0"
description = "An importer from Kore to ml-in-coq"

authors = [
    {name = "Jan Tušil", email = "jenda.tusil@gmail.com"},
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
koreimport = "koreimport.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
